# forja

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  skill_request.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
app/: package-lock.json  tsconfig.tsbuildinfo
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/commands/: mod.rs  sparks.rs
app/src/lib/: tauri.ts
app/src/pages/: MarketplacePage.tsx  SparksPage.tsx
app/src/styles/: globals.css
assets/: app.js  index.html  style.css
crates/forja-cli/: Cargo.toml
crates/forja-cli/src/: cli.rs  main.rs  output.rs  tips.rs  wizard.rs
crates/forja-cli/src/commands/: build.rs  chronicle.rs  decisions.rs  diff.rs  docs.rs  doctor.rs  execute.rs  fix.rs  guide.rs  info.rs  init.rs  install.rs  lint.rs  list.rs  mod.rs  new.rs  plan.rs  review.rs  runs.rs  scan.rs  search.rs  ship.rs  sparks.rs  stats.rs  status.rs  task.rs  team.rs  tracks.rs  uninstall.rs  update.rs  upgrade.rs  validate.rs
crates/forja-cli/src/commands/monitor/: mod.rs  server.rs  state.rs  watcher.rs
crates/forja-cli/tests/: cli_integration.rs  sparks_integration.rs
crates/forja-core/: Cargo.toml
crates/forja-core/src/: analytics.rs  error.rs  frontmatter.rs  lib.rs  lint.rs  paths.rs  settings.rs
crates/forja-core/src/models/: acceptance.rs  active_project.rs  agent_file.rs  claude.rs  config.rs  context_gen.rs  decision.rs  index_gen.rs  lint.rs  mod.rs  phase.rs  plan.rs  plugin.rs  profile.rs  run_log.rs  skill.rs  spec.rs  state.rs  track.rs  validate.rs  vision.rs
crates/forja-core/src/registry/: catalog.rs  diff.rs  git.rs  mod.rs
crates/forja-core/src/scanner/: ai.rs  deterministic.rs  matcher.rs  mod.rs  models.rs
crates/forja-core/src/symlink/: auto_install.rs  manager.rs  mod.rs  sync.rs  upgrade.rs
crates/forja-spark/: Cargo.toml
crates/forja-spark/src/: events.rs  lib.rs  parser.rs  process.rs
crates/forja-tui/: Cargo.toml
crates/forja-tui/src/: app.rs  input.rs  lib.rs  scan_app.rs  scan_input.rs  scan_ui.rs  ui.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SKILL-AUTHORING.md  SKILL-CATALOG.md  SPARKS.md  TEAMS.md
docs/plans/: 2026-02-16-forja-tui-task-launcher-design.md  2026-02-16-forja-tui-task-launcher.md
docs/specs/: example.md
homebrew/: forja.rb.template
npm/cli/: README.md  package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/scripts/: bump-version.sh
scripts/: release.sh
skills/code/database/feature/: README.md
skills/code/database/feature/.claude-plugin/: plugin.json
skills/code/database/feature/agents/: db-coder.md
skills/code/general/feature/: README.md
skills/code/general/feature/agents/: coder.md
skills/code/golang/feature/: README.md
skills/code/nestjs/feature/: README.md
skills/code/nextjs/feature/: README.md
skills/code/python/feature/: README.md
skills/code/rust/feature/: README.md
skills/code/typescript/feature/: README.md
skills/deploy/git/commit/: README.md
skills/deploy/git/pr/: README.md
skills/deploy/verify/checker/: README.md
skills/research/architecture/planner/: README.md
skills/research/codebase/explorer/: README.md
skills/research/docs/researcher/: README.md
skills/research/planning/forja-plan/: README.md
skills/review/code-quality/reviewer/: README.md
skills/review/code-simplifier/simplifier/: README.md
skills/review/documentation/chronicler/: README.md
skills/review/documentation/doc-gen/: README.md
skills/review/performance/analyzer/: README.md
skills/review/pr-workflow/reviewer/: README.md
skills/review/security/auditor/: README.md
skills/teams/dispatch/team/: README.md
skills/teams/full-product/team/: README.md
skills/teams/quick-fix/team/: README.md
skills/teams/refactor/team/: README.md
skills/teams/solo-sprint/team/: README.md
skills/teams/strategic-council/team/: README.md
skills/teams/technical-council/team/: README.md
skills/test/coverage/analyzer/: README.md
skills/test/e2e/playwright/: README.md
skills/test/generate/suite/: README.md
skills/test/tdd/workflow/: README.md
src/: analytics.rs  cli.rs  error.rs  lint.rs  main.rs  output.rs  paths.rs  settings.rs  templates.rs  tips.rs  wizard.rs
src/commands/: build.rs  chronicle.rs  diff.rs  docs.rs  doctor.rs  execute.rs  fix.rs  guide.rs  info.rs  init.rs  install.rs  lint.rs  list.rs  mod.rs  new.rs  phases.rs  plan.rs  review.rs  search.rs  ship.rs  stats.rs  status.rs  task.rs  team.rs  uninstall.rs  update.rs  upgrade.rs
src/commands/monitor/: events.rs  mod.rs  server.rs  state.rs  watcher.rs
src/models/: active_project.rs  analytics.rs  lint.rs  mod.rs  phase.rs  plan.rs  plugin.rs  profile.rs  registry.rs  skill.rs  state.rs
src/registry/: catalog.rs  diff.rs  git.rs
src/symlink/: auto_install.rs  manager.rs  mod.rs  sync.rs
tests/: cli_integration.rs
website/: index.html  package-lock.json  package.json  style.css
(+79 files in other folders)
