[package]
name = "forja"
version = "0.1.0"
edition = "2024"
description = "Skills marketplace CLI for Claude Code"
license = "MIT"
authors = ["Daniel Mendes"]
repository = "https://github.com/dmend3z/forja"
homepage = "https://github.com/dmend3z/forja"
keywords = ["claude-code", "skills", "cli", "agents", "plugins"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
colored = "2"
dirs = "6"
walkdir = "2"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
