[workspace]
members = ["crates/forja-core", "crates/forja-cli", "crates/forja-spark", "crates/forja-tui", "packages/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Daniel Mendes"]
repository = "https://github.com/dmend3z/forja"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
tempfile = "3"
