[package]
name = "forja-core"
description = "Shared business logic for forja — skills marketplace for Claude Code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
